# ESP32_audioTalkBack

./: README.md
paas-esp32s3-sample/: CMakeLists.txt  README.md  partitions.csv  partitions_.csv  sdkconfig
paas-esp32s3-sample/components/agora_iot_sdk/: CMakeLists.txt
paas-esp32s3-sample/components/agora_iot_sdk/include/: agora_rtc_api.h
paas-esp32s3-sample/components/audio_board/esp32_s3_korvo2_v3/: board.c
paas-esp32s3-sample/components/audio_board/include/: board_pins_config.h
paas-esp32s3-sample/components/freertos/esp_additions/: freertos_tasks_c_additions.h
paas-esp32s3-sample/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  blufi_example.c  blufi_example.h  file_server.c  file_server.h  handle_cmd.c  handle_cmd.h  idf_component.yml  json_def.h  json_parse.c  json_parse.h  key.c  key.h  main.c  main_back.c  mqtt.c  mqtt.h  ota.c  ota.h  ring.c  ring.h  sm4.c  sm4.h  tcp.c  tcp.h  upload_script.html  video_doorbell - 副本.c  video_doorbell.c  video_doorbell.h
paas-esp32s3-sample/spiffs_image/: config.txt
paas-esp32s3-sample/spiffs_image/sub/: mac.txt
paas-esp32s3-sample_back/: sdkconfig
paas-esp32s3-sample_back/components/agora_iot_sdk/include/: agora_rtc_api.h
paas-esp32s3-sample_back/components/audio_board/esp32_s3_korvo2_v3/: board_def.h  board_pins_config.c
paas-esp32s3-sample_back/components/audio_hal/driver/es8311/: es8311.c
paas-esp32s3-sample_back/components/audio_pipeline/: audio_pipeline.c
paas-esp32s3-sample_back/components/dueros_service/: dueros_service.c
paas-esp32s3-sample_back/components/esp-adf-libs/esp_audio/include/: esp_audio.h
paas-esp32s3-sample_back/components/wifi_service/src/: wifi_service.c
paas-esp32s3-sample_back/main/: CMakeLists.txt  app_config.h  jpeg_test_data_640x480.h  pcm_test_data_16k_5s.h  pcm_test_data_8k.h  readme.txt  video_doorbell.c  video_doorbell_back.c
(+6 files in other folders)
